--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==6.7
 Flask==0.12.2
 Flask-BabelEx==0.9.3
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.3
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.4
@@ -14,7 +15,9 @@ Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.14.2
 flask-wysiwyg==0.1
+-e git+git@github.com:T620/globe.git@48b0ffcf123238e406884fbc546dc26f778b2147#egg=globe
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
@@ -22,10 +25,14 @@ Mako==1.0.7
 MarkupSafe==0.23
 mercurial==4.3.1
 passlib==1.7.1
+pkg-resources==0.0.0
 psycopg2==2.7.3.1
 pycparser==2.18
 python-dateutil==2.6.1
 python-editor==1.0.3
+pytz==2017.2
+six==1.11.0
+speaklater==1.3
 SQLAlchemy==1.0.12
 Werkzeug==0.11.9
 WTForms==1.0.5
