--- a/globe/requirements.txt
+++ b/globe/requirements.txt
@@ -23,7 +23,8 @@ Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
 flask-wysiwyg==0.1
 futures==3.2.0
--e git+git@github.com:T620/globe.git@e540f58b3a639aeeb2b230ac8f011d77dfdaa9c1#egg=globe
+geopy==1.11.0
+-e git+git@github.com:T620/globe.git@4b392a5ff685f6d32e8e33c472933151619c6a2f#egg=globe
 gunicorn==19.4.5
 idna==2.6
 itsdangerous==0.24
@@ -44,6 +45,7 @@ s3transfer==0.1.12
 six==1.11.0
 speaklater==1.3
 SQLAlchemy==1.0.12
+SQLAlchemy-Utils==0.32.21
 tinys3==0.1.12
 urllib3==1.22
 Werkzeug==0.11.9
